--- a/site_app/static/site_app/css/_part-0.scss
+++ b/site_app/static/site_app/css/_part-0.scss
@@ -48,7 +48,7 @@
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  background-image: url(../img/AD_marseille_bw.jpg);
+  background-image: url(../img/dali_marseille_bw.jpg);
 }
 
 @media only screen and (max-width: 768px) {
