--- a/site_app/templates/site_app/index.html
+++ b/site_app/templates/site_app/index.html
@@ -10,10 +10,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;800&display=swap" rel="stylesheet">
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
   <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
   <link rel="stylesheet" type="text/css" href="{% static 'site_app/css/index.css' %}">
   <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
-  <script  type="text/javascript" src="{% static 'site_app/js/index.js' %}"></script>
 
 </head>
 <body>
@@ -158,4 +157,6 @@
 <!-- <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC3ZavIuBG85zN_jXBBg_a-iGWfcnRzQVk&callback=initMap">
 </script> -->
+<script  type="text/javascript" src="{% static 'site_app/js/index.js' %}"></script>
+
 </html>
