--- a/site_app/static/site_app/css/index.css
+++ b/site_app/static/site_app/css/index.css
@@ -124,7 +124,7 @@
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  background-image: url(../img/AD_marseille_bw.jpg);
+  background-image: url(../img/dali_marseille_bw.jpg);
 }
 
 @media only screen and (max-width: 768px) {
@@ -182,7 +182,7 @@
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
-  background-image: url(../img/AD_fontainebleau_nobg.png);
+  background-image: url(../img/dali_fontainebleau_nobg.png);
   background-color: #376f1d8f;
 }
 
