--- a/site_app/static/site_app/css/liste_m.scss
+++ b/site_app/static/site_app/css/liste_m.scss
@@ -224,6 +224,8 @@ label{
     flex-direction: column;
     align-items: center;
     padding: 30px;
+    text-align: center;
+
 
     p{
         margin-top: 5px;
@@ -249,6 +251,10 @@ label{
   }
 
   @media only screen and (max-width: 768px) {
+    .popup-content{
+      width: 100%;
+
+    }
 
     .popup-wrapper{
         display: block;
