--- a/site_app/static/site_app/css/_part-2.scss
+++ b/site_app/static/site_app/css/_part-2.scss
@@ -25,7 +25,7 @@
 }
 
 #detail-container{
-    // display: none;
+    display: none;
     position: absolute;
     width: 40%;
     background-color: rgba(139, 22, 22, 0.904);
@@ -46,6 +46,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%,-50%);
+        
     }
 
 
@@ -130,10 +131,7 @@
         position: absolute;
         width: 80%;
         left: 10%;
+
     }
 }
 
-#map {
-    height: 200px;
-    margin: 20px;
-  }
