--- a/site_app/static/site_app/css/index.css
+++ b/site_app/static/site_app/css/index.css
@@ -385,6 +385,7 @@ h3 {
 }
 
 #detail-container {
+  display: none;
   position: absolute;
   width: 40%;
   background-color: rgba(139, 22, 22, 0.904);
@@ -485,11 +486,6 @@ h3 {
     width: 80%;
     left: 10%;
   }
-}
-
-#map {
-  height: 200px;
-  margin: 20px;
 }
 
 .anim_a_et_d {
