--- a/site_app/static/site_app/css/_part-2.scss
+++ b/site_app/static/site_app/css/_part-2.scss
@@ -64,11 +64,15 @@
 }
 .close {
     color: rgb(233, 233, 233);
-    float: right;
+    position:absolute;
+    top: 0;
+    right: 0;
+    // float: right;
     font-size: 32px;
     font-weight: bold;
     transform: translateY(-8px);
     margin: 20px;
+    z-index: 10;
   }
   
   .close:hover,
