--- a/site_app/static/site_app/css/index.css
+++ b/site_app/static/site_app/css/index.css
@@ -196,9 +196,7 @@
   color: #922B21;
   text-align: center;
   margin: 0;
-  width: 40%;
-  -webkit-transform: translateX(80%);
-          transform: translateX(80%);
+  width: 100%;
   padding-top: 4rem;
   font-family: 'Charm', cursive;
   font-size: 50px;
@@ -215,7 +213,7 @@
   -ms-grid-rows: 1fr 1fr 1fr;
       grid-template-rows: 1fr 1fr 1fr;
       grid-template-areas: ". box1 box1 box2 box2 ." "box3 box3 box4 box4 box5 box5" ". box6 box6 box7 box7 .";
-  padding: 10vw;
+  padding: 30px 10vw 30px 10vw;
   -webkit-transition: 1s;
   transition: 1s;
 }
@@ -302,8 +300,8 @@ h3 {
   transition: all ease 0.8s;
   left: 15%;
   top: 15%;
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 10px 0 rgba(0, 0, 0, 0.6);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.6), 0 6px 10px 0 rgba(0, 0, 0, 0.6);
   /* transform:translate(0%,30%) */
   /* border: solid 0.5em #922B21; */
 }
@@ -344,13 +342,17 @@ h3 {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    padding: 70px 30px 70px 30px;
   }
   .description {
     font-size: 12px;
   }
   .carte {
     aspect-ratio: 1 / 1.5;
-    width: 90 vw;
+  }
+  .portrait {
+    width: 90%;
+    left: 5%;
   }
 }
 
@@ -420,12 +422,15 @@ h3 {
 
 .close {
   color: #e9e9e9;
-  float: right;
+  position: absolute;
+  top: 0;
+  right: 0;
   font-size: 32px;
   font-weight: bold;
   -webkit-transform: translateY(-8px);
           transform: translateY(-8px);
   margin: 20px;
+  z-index: 10;
 }
 
 .close:hover,
