--- a/site_app/templates/site_app/index.html
+++ b/site_app/templates/site_app/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;800&display=swap" rel="stylesheet">
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
   <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css"/>
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'site_app/css/index.css' %}">
   <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
 
@@ -21,7 +21,7 @@
     <nav class="topnav" id="myTopnav">
       <a href="#accueil" class="active">Accueil</a>
       <a href="#rencontre">Notre rencontre</a>
-      <a href="#temoins" id="temoins_bar">Les Témoins</a>
+      <a href="#temoins" id="temoins_bar">Les témoins</a>
       <a href="#infos">Info pratiques</a>
       <a href="liste_m">Liste de mariage</a>
       <a href="javascript:void(0);" class="icon" onclick="navbar_anim()"><i class="fa fa-bars"></i></a>
