--- a/site_app/static/site_app/css/liste_m.css
+++ b/site_app/static/site_app/css/liste_m.css
@@ -413,9 +413,7 @@ h1 {
   -webkit-transition: all ease 0.5s;
   transition: all ease 0.5s;
   width: 100%;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-  bottom: 0;
+  top: 100%;
   right: 0;
   margin: 0;
   position: absolute;
@@ -669,8 +667,8 @@ label {
 }
 
 .confirmation-visible {
-  -webkit-transform: translateY(0%) !important;
-          transform: translateY(0%) !important;
+  -webkit-transform: translateY(-100%) !important;
+          transform: translateY(-100%) !important;
 }
 
 .button-container {
