--- a/site_app/static/site_app/css/liste_m.scss
+++ b/site_app/static/site_app/css/liste_m.scss
@@ -91,8 +91,8 @@ h1{
   transition: all ease 0.5s;
   // height:30%;
   width: 100%;
-  transform: translateY(100%);
-  bottom:0;
+  // transform: translateY(100%);
+  top:100%;
   right:0;
   margin: 0;
   position: absolute;
@@ -302,7 +302,7 @@ label{
 }
 
 .confirmation-visible{
-  transform: translateY(0%) !important;
+  transform: translateY(-100%) !important;
 }
 
 .button-container{
