--- a/site_app/static/site_app/css/_part-0.scss
+++ b/site_app/static/site_app/css/_part-0.scss
@@ -18,6 +18,7 @@
   text-align: center;
   width: 20%;
   padding: 0.3rem;
+  background-color: rgba(255,255,255,0.5);
   &:hover{
     backdrop-filter: brightness(350%) blur(1px);
   }
