--- a/site_app/static/site_app/css/index.css
+++ b/site_app/static/site_app/css/index.css
@@ -93,6 +93,7 @@
   text-align: center;
   width: 20%;
   padding: 0.3rem;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .countdown_block:hover {
