--- a/site_app/static/site_app/css/_part-0.scss
+++ b/site_app/static/site_app/css/_part-0.scss
@@ -1,9 +1,12 @@
 
 .title-cont{
   // height:50vh;
+  
   display:flex;
   justify-content: center;
   padding-top: 40vh;
+  width: 60vw;
+  margin-left: 20vw;
 }
 .timer-cont{
   margin-top: 10%;
@@ -56,6 +59,15 @@
     margin-left: 10%;
     width: 80%;
 
+  }
+  .title-cont{
+    // height:50vh;
+    
+    display:flex;
+    justify-content: center;
+    padding-top: 30vh;
+    width: 80vw;
+    margin-left: 10vw;
   }
 
 }
