--- a/site_app/templates/site_app/index.html
+++ b/site_app/templates/site_app/index.html
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="carte">
-          <img class="portrait" src="{% static 'site_app/img/Etienne.jpg' %}">
+          <img class="portrait" src="{% static 'site_app/img/Etienne.jpeg' %}">
           <div class="description">
               <h3>Etienne</h3>
               <p>Depuis leur rencontre le premier jour de la rentrée de cinquième, Etienne et Damien ont parcouru ensemble de nombreuses étapes de leur vie. Au fil des questions et des grandes discussions, Etienne s’est révélé être le parfait camarade de vie et de foi. Amoureux de la nature, rugbyman, skieur et randonneur... avec de quelles qualités ce futur médecin ne pourra être qu’un excellent allié pour les futurs mariés.</p>
