--- a/site_app/templates/site_app/index.html
+++ b/site_app/templates/site_app/index.html
@@ -126,7 +126,7 @@
         <img class="portrait" src="{% static 'site_app/img/Martin.jpeg' %}">
         <div class="description">
             <h3>Martin</h3>
-            <p>Le troisième mousquetaire de Ginette est assurément l’homme d’action du trio ! Martin est en effet aussi sociable que sportif, aussi fêtard que dynamique, aussi centralien que Damien. Mais au-delà d’avoir fait les quatre-cent coups en prépa, les deux compères ont construit une amitié durable avec quelques souvenirs mémorables. Enfin, gageons que ce coron guidera comme il se doit ses amis dans leur nouvelle vie… au Nord !</p>
+            <p>Le troisième mousquetaire de Ginette est assurément l’homme d’action du trio ! Martin est en effet aussi sociable que sportif, aussi fêtard que dynamique, aussi centralien que Damien. Mais au-delà d’avoir fait les quatre cents coups en prépa, les deux compères ont construit une amitié durable avec quelques souvenirs mémorables. Enfin, gageons que ce coron guidera comme il se doit ses amis dans leur nouvelle vie… au Nord !</p>
         </div>
       </div>
     </div>
