--- a/site_app/static/site_app/css/index.css
+++ b/site_app/static/site_app/css/index.css
@@ -512,6 +512,7 @@ h3 {
 }
 
 .anim_a_et_d {
+  fill: #922B21;
   -webkit-animation: fill 1s ease forwards 2.12s;
           animation: fill 1s ease forwards 2.12s;
   -webkit-filter: drop-shadow(3px 3px 2px white);
@@ -653,25 +654,19 @@ h3 {
 }
 
 @-webkit-keyframes fill {
-  0% {
-    fill: #922B21;
-  }
-  1% {
+  from {
     fill: transparent;
   }
-  100% {
+  to {
     fill: #922B21;
   }
 }
 
 @keyframes fill {
-  0% {
-    fill: #922B21;
-  }
-  1% {
+  from {
     fill: transparent;
   }
-  100% {
+  to {
     fill: #922B21;
   }
 }
