--- a/site_app/static/site_app/css/_title_anim.scss
+++ b/site_app/static/site_app/css/_title_anim.scss
@@ -3,7 +3,7 @@ $letter-ln: 490.2921142578125, 239.3280029296875, 239.80885314941406, 606.783691
 $time_gap: 0.08s;
 
 .anim_a_et_d{
-    fill:#922B21;   
+    // fill:#922B21;   
     animation: fill 1s ease forwards $time_gap*14 +1;
     filter: drop-shadow( 3px 3px 2px white);
 }
