--- a/site_app/static/site_app/css/liste_m.scss
+++ b/site_app/static/site_app/css/liste_m.scss
@@ -35,10 +35,19 @@ body{
 
 .card-container{
     padding: 100px 10vw 0 10vw;   
+    p{
+      width:80%;
+      text-align: center;
+      margin-left: 10%;
+
+      a{
+        color: #922B21;
+      }
+    }
 }
 
 h1{
-    margin-bottom: 50px;
+    margin: 10px 0 50px 0;
     color: #922B21;
     text-align: center;
     width: 60%;
