--- a/site_app/templates/site_app/liste_m.html
+++ b/site_app/templates/site_app/liste_m.html
@@ -28,6 +28,7 @@
       
       <div class="card-container">
         <h1>Notre liste de mariage</h1>
+        <p>Si votre présence le jour J reste le plus beau cadeau, voici quelques idées pour nous aider à nous installer en Belgique. Vous pouvez également participer librement en accédant directement à notre <a href="https://lydia-app.com/collect/31790-liste-de-mariage-damien-alienor/fr">cagnotte en ligne</a>.</p>
         <ul>
           {% for article in articles %}
             {% include 'site_app/list_card.html' with article=article %}
