--- a/site_app/templates/site_app/index.html
+++ b/site_app/templates/site_app/index.html
@@ -29,7 +29,7 @@
     <section class="part one">
 
       <div class='title-cont'>
-        <svg class="anim_a_et_d"  viewBox="0 0 1234 121" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg type="image/svg+xml" class="anim_a_et_d"  viewBox="0 0 1234 121" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M69.416 94.68H25.64L17.576 117H3.75201L40.04 17.208H55.16L91.304 117H77.48L69.416 94.68ZM65.672 84.024L47.528 33.336L29.384 84.024H65.672Z" stroke="white" stroke-width="4" mask="url(#path-1-outside-1)"/>
             <path d="M120.223 10.44V117H107.119V10.44H120.223Z" stroke="white" stroke-width="4" mask="url(#path-1-outside-1)"/>
             <path d="M149.325 25.272C146.829 25.272 144.717 24.408 142.989 22.68C141.261 20.952 140.397 18.84 140.397 16.344C140.397 13.848 141.261 11.736 142.989 10.008C144.717 8.28 146.829 7.416 149.325 7.416C151.725 7.416 153.741 8.28 155.373 10.008C157.101 11.736 157.965 13.848 157.965 16.344C157.965 18.84 157.101 20.952 155.373 22.68C153.741 24.408 151.725 25.272 149.325 25.272ZM155.661 38.088V117H142.557V38.088H155.661Z" stroke="white" stroke-width="4" mask="url(#path-1-outside-1)"/>
