--- a/site_app/templates/site_app/liste_m.html
+++ b/site_app/templates/site_app/liste_m.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" type="text/css" href="{% static 'site_app/css/liste_m.css' %}">
       
       </head>
-<body>
+<body tabIndex=0>
     <main data-simplebar>
       <nav class="topnav" id="myTopnav">
         <a href="index">Accueil</a>
