--- a/site_app/static/site_app/css/index.scss
+++ b/site_app/static/site_app/css/index.scss
@@ -22,6 +22,12 @@ $font : 'Roboto Slab', serif;
     border-style:solid;
     margin:0;
     padding: 0;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    
 }
 body{
     margin: 0;
@@ -55,6 +61,8 @@ body{
         border-width:0;
     
     }
-
+    .part{
+        background-attachment: scroll;
+    }
 }
 
