--- a/site_app/templates/site_app/index.html
+++ b/site_app/templates/site_app/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-  <main data-simplebar>
+  <main class="section-container" data-simplebar>
     <a name="accueil" id="accueil"></a>
     <nav class="topnav" id="myTopnav">
       <a href="#accueil" class="active">Accueil</a>
@@ -25,7 +25,7 @@
       <a href="#infos">Info pratiques</a>
       <a href="liste_m">Liste de mariage</a>
       <a href="javascript:void(0);" class="icon" onclick="navbar_anim()"><i class="fa fa-bars"></i></a>
-  </nav>
+    </nav>
     <section class="part one">
 
       <div class='title-cont'>
