--- a/site_app/static/site_app/css/index.scss
+++ b/site_app/static/site_app/css/index.scss
@@ -67,7 +67,7 @@ body{
 
     }
     .section-container{
-        scroll-snap-type: y mandatory;
+        scroll-snap-type: y proximity;
         overflow-y: scroll;
         height: 100vh;
     }
