--- a/site_app/static/site_app/css/index.scss
+++ b/site_app/static/site_app/css/index.scss
@@ -61,7 +61,7 @@ body{
         border-width:0;
     
     }
-    .part{
+    .one{
         background-attachment: scroll;
         scroll-snap-align: start;
 
