--- a/site_app/static/site_app/css/_part-0.scss
+++ b/site_app/static/site_app/css/_part-0.scss
@@ -47,6 +47,7 @@
 .one{
   height: calc(100vh - 10px);
   background-image: url(../img/dali_marseille_bw.jpg);
+  background-attachment: scroll !important;
   
 }
 
