--- a/site_app/static/site_app/css/_title_anim.scss
+++ b/site_app/static/site_app/css/_title_anim.scss
@@ -3,8 +3,9 @@ $letter-ln: 490.2921142578125, 239.3280029296875, 239.80885314941406, 606.783691
 $time_gap: 0.08s;
 
 .anim_a_et_d{
-    // fill:#922B21;   
-    animation: fill 1s ease forwards $time_gap*14 +1;
+    fill:#922B21;   
+    animation: fill  $time_gap*14 +1.5 forwards;
+    animation-timing-function: linear,ease-out;
     filter: drop-shadow( 3px 3px 2px white);
 }
 
@@ -40,10 +41,13 @@ $time_gap: 0.08s;
 
 
 @keyframes fill{
-    from{ 
+    0%{ 
         fill:transparent;
     }
-    to{ 
+    90%{ 
+        fill:transparent;       
+    }
+    100%{ 
         fill:#922B21;       
     }
 }
