--- a/site_app/static/site_app/css/index.css
+++ b/site_app/static/site_app/css/index.css
@@ -124,6 +124,7 @@
 .one {
   height: calc(100vh - 10px);
   background-image: url(../img/dali_marseille_bw.jpg);
+  background-attachment: scroll !important;
 }
 
 @media only screen and (max-width: 768px) {
@@ -496,8 +497,11 @@ h3 {
 }
 
 .anim_a_et_d {
-  -webkit-animation: fill 1s ease forwards 2.12s;
-          animation: fill 1s ease forwards 2.12s;
+  fill: #922B21;
+  -webkit-animation: fill 2.62s forwards;
+          animation: fill 2.62s forwards;
+  -webkit-animation-timing-function: linear,ease-out;
+          animation-timing-function: linear,ease-out;
   -webkit-filter: drop-shadow(3px 3px 2px white);
           filter: drop-shadow(3px 3px 2px white);
 }
@@ -637,19 +641,25 @@ h3 {
 }
 
 @-webkit-keyframes fill {
-  from {
+  0% {
     fill: transparent;
   }
-  to {
+  90% {
+    fill: transparent;
+  }
+  100% {
     fill: #922B21;
   }
 }
 
 @keyframes fill {
-  from {
+  0% {
     fill: transparent;
   }
-  to {
+  90% {
+    fill: transparent;
+  }
+  100% {
     fill: #922B21;
   }
 }
@@ -705,16 +715,6 @@ body {
     padding: 0;
     width: 100vw;
     border-width: 0;
-  }
-  .one {
-    background-attachment: scroll;
-    scroll-snap-align: start;
-  }
-  .section-container {
-    -ms-scroll-snap-type: y proximity;
-        scroll-snap-type: y proximity;
-    overflow-y: scroll;
-    height: 100vh;
   }
 }
 /*# sourceMappingURL=index.css.map */
