--- a/site_app/static/site_app/css/liste_m.scss
+++ b/site_app/static/site_app/css/liste_m.scss
@@ -318,3 +318,41 @@ label{
   display:flex;
   justify-content: flex-end;
 }
+
+.card-categorie{
+  border-top: 3px solid #922B21;
+  border-bottom: 3px solid #922B21;
+  overflow: hidden;
+  transition: all 0.5s ease-out;
+  max-height: 3 vh;
+  position: relative;
+  color: #922B21;
+
+
+
+
+  h2{
+    padding: 0.6rem;
+    margin:0;
+    color: inherit;
+    transition: all 0.3s ease-out;
+
+  }
+
+  i{
+    color: inherit;
+    position:absolute;
+    top: 0;
+    right: 0;
+    font-size: 32px;
+    font-weight: bold;
+    margin:10px;
+    transition: all 0.3s ease-out;
+    transform-origin: center;    
+  }
+
+
+}
+.hide_categorie{
+  max-height: 3.2rem;
+}
