--- a/site_app/templates/site_app/index.html
+++ b/site_app/templates/site_app/index.html
@@ -61,6 +61,13 @@
       </div>
     </div>
     </section>
+    <section class="part four">
+      <a href="liste_m" class="liste-redirection">
+      <P>Accéder à notre liste de mariage </p>
+      <i class="fa fa-angle-right"></i> 
+      <!-- <i class="fas fa-angle-right"></i>   -->
+      </a>
+     </section>
     <a name="rencontre" id="rencontre"></a>
     <section class="part rencontre">
       <div class="wrapper">
@@ -150,6 +157,7 @@
         </div>
       </div>
     </section>
+
   </main>
 
 
