--- a/site_app/static/site_app/css/index.scss
+++ b/site_app/static/site_app/css/index.scss
@@ -63,3 +63,42 @@ body{
     }
 }
 
+.liste-redirection{
+    background-color: #922B21;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+    p{
+        margin: 0;
+        padding: 0;
+        color: white;
+        transition: all .3s ease-in-out;
+        font-size: 1.2rem;
+
+
+
+
+    }
+    i{
+        // transform: rotate(-90deg);
+        margin-left: 1.6rem;
+        font-size: 2rem;
+        color: white;
+        transition: all .3s ease-in-out;
+
+
+    }
+
+    &:hover{
+        p{
+            // transform: translateX(20px);
+            transform: translateX(0.8rem);
+        }
+        i{
+            // transform: translateX(20px);
+            transform: translateX(1.6rem);
+        }
+    }
+}
