--- a/site_app/templates/site_app/index.html
+++ b/site_app/templates/site_app/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'site_app/css/index.css' %}">
   <!-- <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script> -->
+  <link rel="icon" href="{% static 'site_app/img/D_A.png' %}">
 
 </head>
 <body>
