--- a/site_app/templates/site_app/liste_m.html
+++ b/site_app/templates/site_app/liste_m.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="{% static 'site_app/css/liste_m.css' %}">
+        <link rel="icon" href="{% static 'site_app/img/D_A.png' %}">
       
       </head>
 <body tabIndex=0>
