--- a/site_app/templates/site_app/index.html
+++ b/site_app/templates/site_app/index.html
@@ -75,8 +75,10 @@
         <h2>Toute une histoire...</h2>
         <p>Il était une fois une randonnée, quelques pas de danse et un duo de choc à la tête de l'aumônerie. De fil en aiguille, au gré des escapades en montagne et périples à vélo, les sportifs tourtereaux ont peu à peu découvert de multiples facettes de leurs caractères et élaboré des rêves communs. Aussi, c’est avec beaucoup d’amour et tout d’autant d’humour qu’ils ont décidé de s’engager l’un pour l’autre dans cette belle aventure du mariage qui les emmènera sur bien des rivages, le premier n’étant ni moins que le plat pays qui sera bientôt le leur.
           Une danseuse, un tennisman. Une musicienne, un joueur d’échecs. Deux centraliens, pour la vie, main dans la main.
-          </p>
+        </p>
+        
       </div>
+      <img class="hidden-charlie" src="{% static 'site_app/img/charlie-bg.png' %}">
 
     </section>
     <a name="temoins" id="temoins"></a>
