--- a/site_app/static/site_app/css/liste_m.css
+++ b/site_app/static/site_app/css/liste_m.css
@@ -725,19 +725,23 @@ label {
 .card-categorie ul {
   width: 98%;
   margin-left: 1%;
+  -webkit-transition: opacity 0.25s, margin 0.25s, padding 0.25s;
+  transition: opacity 0.25s, margin 0.25s, padding 0.25s;
 }
 
-.hide_categorie ul {
+.hide_categorie ul, .hide_categorie ul > * {
   margin: 0;
   padding: 0;
   height: 0;
   /* fade out, then shrink */
-  -webkit-transition: opacity .25s, margin  .25s, padding .25s;
-  transition: opacity .25s, margin  .25s, padding .25s;
 }
 
-.hide_categorie ul li {
-  -webkit-transition: margin  .25s, padding .25s, height .25s;
-  transition: margin  .25s, padding .25s, height .25s;
+.hidden-charlie {
+  -webkit-transform: rotateZ(90deg) translateX(-6px);
+          transform: rotateZ(90deg) translateX(-6px);
+  position: absolute;
+  bottom: 50%;
+  left: 0%;
+  width: 50px;
 }
 /*# sourceMappingURL=liste_m.css.map */
