--- a/site_app/static/site_app/css/liste_m.scss
+++ b/site_app/static/site_app/css/liste_m.scss
@@ -353,12 +353,15 @@ label{
   ul{
     width: 98%;
     margin-left: 1%;
+    transition: opacity .25s,
+                margin  .25s,
+                padding .25s,
   }
 
 
 }
 .hide_categorie{
-  > * {
+  ul,ul > * {
     // font-size: 0;
     margin: 0;
     // opacity: 0;
@@ -371,6 +374,12 @@ label{
       //             height 10s;
     }
                 
-  }
+}
   // max-height: 3.2rem;
+  .hidden-charlie{
+    transform: rotateZ(90deg) translateX(-6px);
+    position: absolute;
+    bottom: 50%;
+    left:0%;
+    width: 50px;
 }
