--- a/site_app/templates/site_app/liste_m.html
+++ b/site_app/templates/site_app/liste_m.html
@@ -28,7 +28,7 @@
       </nav>
       <div class="card-container">
         <h1>Notre liste de mariage</h1>
-        <p>Si votre présence le jour J reste le plus beau cadeau, voici quelques idées pour nous aider à nous installer en Belgique. Vous pouvez également participer librement en accédant directement à notre <a href="https://lydia-app.com/collect/31790-liste-de-mariage-damien-alienor/fr">cagnotte en ligne</a>.</p>
+        <p>Si votre présence le jour J reste le plus beau cadeau, voici quelques idées pour nous aider à nous installer en Belgique. Vous pouvez également <a onclick="show_participation()" style="cursor: pointer;">participer librement</a>.</p>
         <img class="hidden-charlie" src="{% static 'site_app/img/charlie-bg.png' %}">
         {% for categorie in categories %}
         <div class="card-categorie">
