--- a/site_app/static/site_app/css/liste_m.scss
+++ b/site_app/static/site_app/css/liste_m.scss
@@ -44,12 +44,13 @@ body{
 
       a{
         color: #922B21;
+        text-decoration: none;
       }
     }
 }
 
 h1{
-    margin: 10px 0 50px 0;
+    margin: 10px 0 40px 0;
     color: #922B21;
     text-align: center;
     width: 60%;
@@ -382,4 +383,15 @@ label{
     bottom: 50%;
     left:0%;
     width: 50px;
+}
+.lien-imprimer{
+  color: #922a218f;
+  margin: 0.6rem;
+
+  a{
+    color: #922a218f; 
+    text-decoration: none;
+  }
+
+  // transform: translateY(-0.6rem);
 }
